# T-SIMDe

./: Abs.hpp  Add.hpp  CMakeLists.txt  CMakeSettings.json  Ceil.hpp  Convert.hpp  ConvertFrom128.hpp  ConvertFrom256.hpp  ConvertFrom512.hpp  Divide.hpp  Equals.hpp  EqualsOrGreater.hpp  EqualsOrLower.hpp  Fill.hpp  Floor.hpp  Greater.hpp  IgnoreWarningsPush.inl  Intrinsics.hpp  Lesser.hpp  Load.hpp  Log.hpp  Max.hpp  Min.hpp  MoreSIMD.hpp  Multiply.hpp  Pow.hpp  README.md  Round.hpp  SIMD.hpp  SetGet.hpp  ShiftLeft.hpp  ShiftRight.hpp  Store.hpp  Subtract.hpp  XOr.hpp
.github/workflows/: ci.yml
include/: Langulus.T-SIMDe.hpp
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestAdd.cpp  TestSIMD.cpp
